# rag-text-splitting-analysis

./: .gitignore  chunk_upload.py  docker-compose.yml  evaluate.py  evaluations.json  llm.py  pyproject.toml  question_generation.py  question_generation_human_prompt.txt  question_generation_system_prompt.txt  questions.json
